--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -331,8 +331,6 @@ items:
         href: using-admin-roles.md
       - name: Управление Teams в Центре администрирования Teams
         href: manage-teams-in-modern-portal.md
-      - name: Управление параметрами Teams в организации
-        href: enable-features-office-365.md
       - name: Управление политиками
         items:
           - name: Обзор
@@ -349,6 +347,8 @@ items:
             href: manage-policy-packages.md
       - name: Работа с людьми из-за пределов организации
         items:
+          - name: Безопасный обмен файлами и совместная работа с Teams
+            href: /microsoft-365/solutions/setup-secure-collaboration-with-teams?wt.mc_id=TeamsTOCSecureCollab001
           - name: Общение с пользователями из других организаций
             href: communicate-with-users-from-other-organizations.md
           - name: Внешний доступ (федерация)
