--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1407,6 +1407,8 @@ items:
             href: rooms/standards-and-room-planner.md
           - name: 'Инциденты, о которых сообщил клиент'
             href: rooms/customer-reported-incidents.md
+          - name: Сведения о данных и конфиденциальности
+            href: rooms/data-and-privacy-info.md
           - name: Использование мобильного приложения "Комнаты Teams"
             href: rooms/extended-mobile-app.md
       - name: Устройства
